feat: Criando pagina html e estilização css

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Amazon Product Scraper</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Amazon Product Scraper</title>
+  <!-- Link to your CSS stylesheet -->
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Amazon Product Scraper</h1>
-    <div class="search-container">
-        <input type="text" id="keyword" placeholder="Enter a keyword">
-        <button id="search-button">Search</button>
-    </div>
-    <div id="results-container">
-        <!-- Resultados aqui -->
-    </div>
-    <script src="script.js"></script>
+  <h1>Amazon Product Scraper</h1>
+  <div class="search-container">
+    <input type="text" id="keyword" placeholder="Digite a palavra-chave">
+    <button id="search-button">Scraping</button>
+  </div>
+  <div id="results-container" class="results"></div>
+
+  <!-- Include your JavaScript file at the end of the body -->
+  <script src="script.js"></script>
 </body>
 </html>
