fix: correção do problema de diretorios

--- a/index.html
+++ b/index.html
@@ -4,8 +4,46 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amazon Product Scraper</title>
-  <!-- Link to your CSS stylesheet -->
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #f5f5f5;
+    }
+
+    h1 {
+      background-color: #232f3e;
+      color: #fff;
+      padding: 20px;
+      margin: 0;
+    }
+
+    .search-container {
+      margin: 20px 0;
+    }
+
+    input[type="text"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    button {
+      background-color: #232f3e;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .results {
+      text-align: left;
+      margin: 20px;
+    }
+  </style>
 </head>
 <body>
   <h1>Amazon Product Scraper</h1>
@@ -15,7 +53,62 @@
   </div>
   <div id="results-container" class="results"></div>
 
-  <!-- Include your JavaScript file at the end of the body -->
-  <script src="script.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const searchButton = document.getElementById('search-button');
+      const keywordInput = document.getElementById('keyword');
+      const resultsContainer = document.getElementById('results-container');
+
+      if (searchButton && keywordInput && resultsContainer) {
+        searchButton.addEventListener('click', () => {
+          const keyword = keywordInput.value;
+          if (keyword) {
+            resultsContainer.innerHTML = '';
+
+            fetch(`/api/scrape?keyword=${keyword}`)
+              .then((response) => {
+                if (!response.ok) {
+                  throw new Error('Falha na solicitação.');
+                }
+                return response.json();
+              })
+              .then((data) => {
+                if (data.length === 0) {
+                  resultsContainer.innerHTML = 'Nenhum resultado encontrado.';
+                } else {
+                  data.forEach((product) => {
+                    const productDiv = document.createElement('div');
+                    productDiv.classList.add('product');
+
+                    const title = document.createElement('h2');
+                    title.textContent = product.title;
+
+                    const rating = document.createElement('p');
+                    rating.textContent = `Rating: ${product.rating}`;
+
+                    const numReviews = document.createElement('p');
+                    numReviews.textContent = `Reviews: ${product.numReviews}`;
+
+                    const image = document.createElement('img');
+                    image.src = product.imageURL;
+
+                    productDiv.appendChild(title);
+                    productDiv.appendChild(rating);
+                    productDiv.appendChild(numReviews);
+                    productDiv.appendChild(image);
+
+                    resultsContainer.appendChild(productDiv);
+                  });
+                }
+              })
+              .catch((error) => {
+                console.error(error);
+                resultsContainer.innerHTML = 'Erro ao buscar resultados.';
+              });
+          }
+        });
+      }
+    });
+  </script>
 </body>
 </html>
