--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
       font-family: Arial, sans-serif;
       text-align: center;
       background-color: #f5f5f5;
+      margin: 0;
     }
-
+  
     h1 {
       background-color: #232f3e;
       color: #fff;
       padding: 20px;
       margin: 0;
     }
-
+  
     .search-container {
       margin: 20px 0;
     }
-
+  
     input[type="text"] {
       padding: 10px;
       border: 1px solid #ccc;
       border-radius: 5px;
       font-size: 16px;
     }
-
+  
     button {
       background-color: #232f3e;
       color: #fff;
@@ -39,10 +40,41 @@
       font-size: 16px;
       cursor: pointer;
     }
-
+  
     .results {
       text-align: left;
       margin: 20px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+  
+    .product {
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      padding: 10px;
+      margin: 10px;
+      width: 300px;
+      box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+      background-color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .product h2 {
+      font-size: 18px;
+      margin: 10px 0;
+    }
+  
+    .product p {
+      font-size: 14px;
+      margin: 5px 0;
+    }
+  
+    .product img {
+      max-width: 100%;
+      height: auto;
     }
   </style>
 </head>
